src/snapshots/afrotd__parser__tests__rule_2.27.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 27
  - 1
title: Team A und Team B
text: "Team A ist das Team, das dazu bestimmt ist, den Ball ins Spiel zu bringen, und Team B ist der Gegner. Die Teams behalten diese Bezeichnungen, bis der Ball das nächste Mal spielbereit ist."
interpretations: []
