src/snapshots/afrotd__parser__tests__rule_2.27.10.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 27
  - 10
title: Ausgewechselter Spieler
text: "Ein ausgewechselter Spieler ist ein Spieler, der an einem vorherigen Down teilgenommen hat und durch einen Ersatzspieler ersetzt wurde und das Spielfeld und die Endzonen verlassen hat."
interpretations: []
