src/snapshots/afrotd__parser__tests__rule_2.27.11.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 27
  - 11
title: Unterzahl
text: "Unterzahl ist eine Situation, die entsteht, wenn ein Team weniger als 11 Spieler im Spiel hat."
interpretations: []
