src/snapshots/afrotd__parser__tests__rule_2.27.13.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 27
  - 13
title: Teamangehörige und Teammitglieder
text: "Ein Teammitglied ist Teil einer Gruppe von potentiellen Spielern in Ausrüstung, das zur Spielteilnahme bei einem Footballspiel bestimmt ist. Ein Mitspieler ist ein Teammitglied eines Teams, welches sich während eines Downs auf dem Feld befindet. Alle anderen Personen sind Teamangehörige, wenn sie sich in einer Teamzone aufhalten."
interpretations: []
